# template-backend-api-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  clippy.toml  docker-compose.yml  rustfmt.toml
config/: default.yaml  development.yaml  local.yaml  production.yaml  test.yaml
migrations/: 001_initial.sql
scripts/: README.md  build-local.sh  build.sh  docker-build.sh  set-build-env.sh
src/: lib.rs  main.rs  metrics.rs  shutdown.rs  tracing.rs
src/config/: mod.rs  settings.rs  sources.rs  vault.rs
src/database/: mod.rs
src/models/: auth.rs  common.rs  mod.rs  user.rs
src/repository/: mod.rs  user_repository.rs
src/services/: auth_service.rs  container.rs  external_service.rs  mod.rs  user_service.rs
src/shutdown/: tests.rs
src/utils/: crypto.rs  http.rs  mod.rs  time.rs  validation.rs
src/web/: mod.rs  router.rs
src/web/extractors/: current_user.rs  error_context.rs  mod.rs
src/web/handlers/: health_handlers.rs  metrics_handlers.rs  mod.rs  user_handlers.rs
src/web/middleware/: auth.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
src/web/responses/: README.md  context.rs  error.rs  mod.rs
